--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,5 +1,7 @@
-<footer>
-  <p>
-  Created By Simeon Kerkola -  Copyright {{getCurrentYear}}
-  </p>
-</footer>
+  <footer>
+    <p>
+    Created By Simeon Kerkola -  Copyright {{getCurrentYear}}
+    </p>
+  </footer>
+</body>
+</html>
