--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,26 @@
-<header>
-  <h1>{{pageTitle}}</h1>
-  <p><a href="/">Home</a></p>
-  <p><a href="/about">about</a></p>
-  <p><a href="/projects">projects</a></p>
+<!DOCTYPE html>
+<html>
+  <head>
+      <meta charset"=utf-8" />
+      <title>{{pageTitle}}</title>
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-102566898-1', 'auto');
+        ga('send', 'pageview');
+
+      </script>
+  </head>
+  <body>
+    <header>
+      <h1>{{pageTitle}}</h1>
+      <p><a href="/">Home</a></p>
+      <p><a href="/about">about</a></p>
+      <p><a href="/projects">projects</a></p>
 </header>
+
+
+
