--- a/views/chart.hbs
+++ b/views/chart.hbs
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>ChartJS - Doughnut</title>
-         <script src="/js/jquery-3.2.1.min.js" charset="utf-8"></script>
-        <script src="/js/Chart.js"></script>
+         <script src="/jquery/jquery.js" type="text/javascript">></script>
+        <script src="/chart.js/Chart.js" type="text/javascript">></script>
     </head>
     <body>
       <canvas id="pieChart"></canvas>
