Tweak static pages a bit

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,6 +1,6 @@
   <footer>
     <p>
-    Created By Simeon Kerkola -  Copyright {{getCurrentYear}}
+    © {{getCurrentYear}} Simeon Kerkola
     </p>
   </footer>
 </body>
