--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -16,10 +16,10 @@
   <body>
     <header>
       <h1>{{pageTitle}}</h1>
-      <p><a href="/">Home</a></p>
+      <p><a href="/">headshot</a></p>
       <p><a href="/about">about</a></p>
-      <p><a href="/projects">projects</a></p>
-</header>
+      <p><a href="/projects">cherries</a></p>
+    </header>
 
 
 
