Add Waether app to my projects

--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -1,6 +1,9 @@
 {{> header}}
   <p>
     Some of my projects
+    <ul>
+      <li><a href="https://stark-stream-28422.herokuapp.com">Weather app</a></li>
+    </ul>
   </p>
 
 {{> footer}}
