--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -19,6 +19,7 @@
       <p><a href="/">headshot</a></p>
       <p><a href="/about">about</a></p>
       <p><a href="/projects">cherries</a></p>
+      <p><a href="https://github.com/sssmi/">Github</a></p>
     </header>
 
 
