--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -2,7 +2,7 @@
   <p>
     Some of my projects
     <ul>
-      <li><a href="https://stark-stream-28422.herokuapp.com">Weather app</a></li>
+      <li><a href="http://stark-stream-28422.herokuapp.com">Weather app</a></li>
     </ul>
   </p>
 
