Tweak projects page

--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -2,7 +2,13 @@
   <p>
     Some of my projects
     <ul>
-      <li><a href="https://wet-socks.herokuapp.com">Weather app</a></li>
+      <li><a href="https://wet-socks.herokuapp.com">Weather app</a>
+        <ul>
+          <li>Keywords: Nodejs Express Bootstrap googleapis</li>
+          <li><a href="https://github.com/sssmi/wet-socks" target="_blank">Github</a></li>
+        </ul>
+
+      </li>
     </ul>
   </p>
 
