--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -16,8 +16,8 @@
   <body>
     <header>
       <h1>{{pageTitle}}</h1>
-      <p><a href="/">headshot</a></p>
-      <p><a href="/about">about</a></p>
+      <p><a href="/">head</a></p>
+      <p><a href="/about">what about</a></p>
       <p><a href="/projects">cherries</a></p>
       <p><a href="https://github.com/sssmi/">Github</a></p>
     </header>
