--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -4,7 +4,7 @@
     <ul>
       <li><a href="https://wet-socks.herokuapp.com">Weather app</a>
         <ul>
-          <li>Keywords: Nodejs Express Bootstrap googleapis</li>
+          <li>Keywords: Nodejs Express Bootstrap Googleapis DarkskyAPI</li>
           <li><a href="https://github.com/sssmi/wet-socks" target="_blank">Github</a></li>
         </ul>
 
