Add a link to Skeleton Chat in /projects

--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -1,15 +1,20 @@
 {{> header}}
-  <p>
-    Some of my projects
-    <ul>
-      <li><a href="https://wet-socks.herokuapp.com">Weather app</a>
-        <ul>
-          <li>Keywords: Nodejs Express Bootstrap Googleapis DarkskyAPI</li>
-          <li><a href="https://github.com/sssmi/wet-socks" target="_blank">Github</a></li>
-        </ul>
+<p>
+  Some of my projects
+  <ul>
+    <li><a href="https://wet-socks.herokuapp.com">Weather app</a>
+      <ul>
+        <li>Keywords: Nodejs Express Bootstrap Googleapis DarkskyAPI</li>
+        <li><a href="https://github.com/sssmi/wet-socks" target="_blank">Github</a></li>
+      </ul>
+    </li>
 
-      </li>
-    </ul>
-  </p>
+    <li> <a href="https://skeleton-chat.herokuapp.com/">Skeleton chat</a>
+      <ul>
+        <li>Keywords: Nodejs Express jQuery Socket.io</li>
+      </ul>
+    </li>
+  </ul>
+</p>
 
 {{> footer}}
