--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,7 @@
 {{> header}}
-  <p>{{welcomeMessage}}</p>
-  <p>Developing it!</p>
+  <h2>{{welcomeMessage}}</h2>
+  <p>Javascript developer currently based in Helsinki</p>
+  <p>(or possibly in Tokyo)</p>
+  <p>I'm looking for new opportunities, so check out my <a href="/projects">projects</a> and be in touch!</p>
 
 {{> footer}}
