--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -12,6 +12,14 @@
     <li> <a href="https://skeleton-chat.herokuapp.com/">Skeleton chat</a>
       <ul>
         <li>Keywords: Nodejs Express jQuery Socket.io</li>
+        <li><a href="https://github.com/sssmi/node-skeleton-chat" target="_blank">Github</a></li>
+      </ul>
+    </li>
+
+    <li> <a href="/">Home page (this site)</a>
+      <ul>
+        <li>Keywords: Nodejs Express Handlebars</li>
+        <li><a href="https://github.com/sssmi/node-web-server" target="_blank">Github</a></li>
       </ul>
     </li>
   </ul>
