Edit /projects page

--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -11,7 +11,7 @@
 
     <li> <a href="https://skeleton-chat.herokuapp.com/">Skeleton chat</a>
       <ul>
-        <li>Keywords: Nodejs Express jQuery Socket.io</li>
+        <li>Keywords: Nodejs Express Socket.io jQuery Mustache</li>
         <li><a href="https://github.com/sssmi/node-skeleton-chat" target="_blank">Github</a></li>
       </ul>
     </li>
