--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -16,6 +16,13 @@
       </ul>
     </li>
 
+    <li> Blog UI
+      <ul>
+        <li>Keywords: Html CSS Javascript</li>
+        <li><a href="https://github.com/sssmi/simple-blog-ui" target="_blank">Github</a></li>
+      </ul>
+    </li>
+
     <li> <a href="/">Home page (this site)</a>
       <ul>
         <li>Keywords: Nodejs Express Handlebars</li>
